# claude-voice-windows

./: .gitignore  .mcp.json  pyproject.toml
.claude/commands/: voice-chat.md
docs/: CONTEXT.md
docs/adr/: 0001-mcp-tool-driven-turn-based.md  0002-skip-permissions-with-voice-confirmation.md  0003-dual-engine-streaming-listen.md  0004-delegated-quasi-concurrency.md  0005-windows-native-audio-path.md
docs/changes/: CHANGELOG.md
docs/design/: design.md
docs/requirements/: requirements.md
docs/tasks/: STATUS.md
docs/tasks/00-environment-setup/: epic.md
docs/tasks/00-environment-setup/01-local-runtime/: story.md
docs/tasks/00-environment-setup/02-external-services/: story.md
docs/tasks/00-environment-setup/03-setup-documentation/: story.md
docs/tasks/01-mcp-server-foundation/: epic.md
docs/tasks/01-mcp-server-foundation/01-server-skeleton/: story.md
docs/tasks/02-voice-output-speak/: epic.md
docs/tasks/02-voice-output-speak/01-synthesize-and-play/: story.md
docs/tasks/03-voice-input-listen/: epic.md
docs/tasks/03-voice-input-listen/01-record-and-finalize/: story.md
docs/tasks/03-voice-input-listen/02-transcribe-and-expose-tool/: story.md
docs/tasks/04-voice-chat-loop/: epic.md
src/claude_voice/: __main__.py  config.py  server.py  types.py
src/claude_voice/listen/: __init__.py  recorder.py  transcriber.py
src/claude_voice/speak/: __init__.py  player.py  synthesizer.py
tests/: test_config.py  test_listen_pipeline.py  test_player.py  test_recorder.py  test_server.py  test_speak.py  test_synthesizer.py  test_transcriber.py  test_types.py
(+25 files in other folders)
