[project]
name = "claude-voice"
version = "0.1.0"
description = "Claude Code をハンズフリーで使うための音声入出力 MCP サーバ（Windows ネイティブ）"
requires-python = ">=3.10,<3.12"
dependencies = [
    "mcp>=1.27.1",
    "faster-whisper>=1.2.1",
    "vosk>=0.3.45",
    "requests>=2.34.2",
    "numpy>=1.26",
]

[project.scripts]
claude-voice = "claude_voice.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_voice"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
